--- a/faq.html
+++ b/faq.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Часто задаваемые вопросы (FAQ)</h1>
+        <img src="images/logo.jpg" alt="Логотип" class="logo">
+        <h1>FAQ</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="cart.html">Корзина</a></li>
+                <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li> <!-- Добавленная ссылка на FAQ -->
                 <li><a href="about.html">Об авторе</a></li>
             </ul>
