--- a/catalog.html
+++ b/catalog.html
@@ -1,73 +1,81 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Каталог</title>
-  <link rel="stylesheet" href="css\catalog_styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Каталог</title>
+    <link rel="stylesheet" href="css/catalog.css">
 </head>
 <body>
-  <header class="header">
-    <div class="logo">Логотип</div>
-    <div class="banner">Баннер</div>
+  <header>
+    <img src="images/logo.jpg" alt="Логотип" class="logo">
+    <h1>КАТАЛОГ</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="cart.html">Корзина</a></li>
+            <li><a href="add_product.html">Добавить товар</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="about.html">Об авторе</a></li>
+        </ul>
+    </nav>
+
+    <form action="search.html" method="get" class="search-form">
+        <input type="text" name="query" placeholder="Поиск по играм..." required>
+        <button type="submit">Поиск</button>
+    </form>
+
   </header>
 
-  <main class="main">
-    <aside class="sidebar">
-      <div class="categories-title">Категории &#x25B6;</div>
-      <ul class="categories-list">
-        <li>Игры</li>
-        <li>Скины</li>
-        <li>Дополнения</li>
-        <li>Скоро</li>
-        <li>Игровая валюта</li>
-      </ul>
-    </aside>
+    <main>
+        <aside class="categories-menu">
+            <h2>Категории</h2>
+            <ul>
+                <li><a href="#">Экшен</a></li>
+                <li><a href="#">РПГ</a></li>
+                <li><a href="#">Стратегии</a></li>
+                <li><a href="#">Гонки</a></li>
+                <li><a href="#">Приключения</a></li>
+            </ul>
+        </aside>
+        <section class="product-list">
+            <div class="game" data-url="products/product1.html">
+                <img src="images/game1.png" alt="Игра 1" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 1</h3>
+                    <p>Описание игры 1. Цена: 500 руб.</p>
+                    <p><strong>Жанр:</strong> Экшен, Приключения</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game">
+                <img src="images/game2.jpg" alt="Игра 2" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 2</h3>
+                    <p>Описание игры 2. Цена: 700 руб.</p>
+                    <p><strong>Жанр:</strong> РПГ</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game">
+                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 3</h3>
+                    <p>Описание игры 3. Цена: 600 руб.</p>
+                    <p><strong>Жанр:</strong> Стратегии</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+        </section>
+    </main>
+    <button id="scrollTop" title="Наверх">↑</button>
+    <script src="js\catalog.js"></script>
 
-    <section class="products">
-      <div class="product">
-        <div class="product-photo">
-          <img id="main-image-1" src="https://via.placeholder.com/100" alt="Фото товара">
-        </div>
-        <div class="thumbnails">
-          <img class="thumbnail" src="https://via.placeholder.com/50" alt="Миниатюра 1" data-src="https://via.placeholder.com/100">
-          <img class="thumbnail" src="https://via.placeholder.com/50/ff0000" alt="Миниатюра 2" data-src="https://via.placeholder.com/100/ff0000">
-          <img class="thumbnail" src="https://via.placeholder.com/50/00ff00" alt="Миниатюра 3" data-src="https://via.placeholder.com/100/00ff00">
-        </div>
-        <div class="product-description">Описание</div>
-        <div class="product-price">Цена</div>
-        <button class="add-to-cart">Добавить в корзину</button>
-      </div>
-
-      <div class="product">
-        <div class="product-photo">
-          <img id="main-image-2" src="https://via.placeholder.com/100" alt="Фото товара">
-        </div>
-        <div class="thumbnails">
-          <img class="thumbnail" src="https://via.placeholder.com/50" alt="Миниатюра 1" data-src="https://via.placeholder.com/100">
-          <img class="thumbnail" src="https://via.placeholder.com/50/0000ff" alt="Миниатюра 2" data-src="https://via.placeholder.com/100/0000ff">
-          <img class="thumbnail" src="https://via.placeholder.com/50/ffff00" alt="Миниатюра 3" data-src="https://via.placeholder.com/100/ffff00">
-        </div>
-        <div class="product-description">Описание</div>
-        <div class="product-price">Цена</div>
-        <button class="add-to-cart">Добавить в корзину</button>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="social-icons">
-      <div class="icon">VK</div>
-      <div class="icon">Telegram</div>
-      <div class="icon">GitHub</div>
-    </div>
-    <button class="footer-logo">Логотип</button>
-    <nav class="footer-nav">
-      <a href="#">FAQ</a>
-      <a href="#">Контакты</a>
-    </nav>
-  </footer>
-
-  <script src="js\catalog.js"></script>
+    <footer>
+        <h2 id="contact">Контакты</h2>
+        <p>Email: support@wingmanstore.com</p>
+        <p>Телефон: +7 (123) 456-78-90</p>
+    </footer>
 </body>
 </html>
