--- a/add_product.html
+++ b/add_product.html
@@ -20,12 +20,8 @@
                 <li><a href="about.html">Об авторе</a></li>
             </ul>
         </nav>
-            <form action="search.html" method="get" class="search-form">
-                <input type="text" name="query" placeholder="Поиск по играм..." required>
-                <button type="submit" id="buttonSearch">Поиск</button>
-            </form> 
-    
     </header>
+    <main>
     <div class="form-container">
         <h1>«Форма добавления товара»</h1>
         <form id="addProductForm">
@@ -78,11 +74,13 @@
             <button type="submit">Добавить товар</button>
         </form>
     </div>
+</main>
     <footer>
+        <a id="scrollTop" title="Наверх">↑</a>
         <h2 id="contact">Контакты</h2>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
-    <script src="js\add_product.js"></script>
+    <script src="js/add_product.js"></script>
 </body>
 </html>
