--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
         <h1>КОРЗИНА</h1>
         <nav>
             <ul>
-                <li><a href="#home">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
@@ -27,37 +27,13 @@
         </form>
 
     </header>
-
+    <main>
     <section class="product-list">
-        <h2>ВАШИ ТОВАРЫ В КОРЗИНЕ</h2>
-        <div class="game" data-url="products/product1.html">
-            <img src="images/product1_1.jpg" alt="Игра 1" class="game-thumbnail">
-            <div class="game-info">
-                <h3>Игра 1</h3>
-                <p>Описание игры 1. Цена: 500 руб.</p>
-                <p><strong>Жанр:</strong> Экшен, Приключения</p>
-            </div>
-            <button class="buy-button">Удалить из корзины</button>
-        </div>
-        <div class="game">
-            <img src="images/product1_3.jpg" alt="Игра 2" class="game-thumbnail">
-            <div class="game-info">
-                <h3>Игра 2</h3>
-                <p>Описание игры 2. Цена: 700 руб.</p>
-                <p><strong>Жанр:</strong> РПГ</p>
-            </div>
-            <button class="buy-button">Удалить из корзины</button>
-        </div>
-        <div class="game">
-            <img src="images/product1_4.jpg" alt="Игра 3" class="game-thumbnail">
-            <div class="game-info">
-                <h3>Игра 3</h3>
-                <p>Описание игры 3. Цена: 600 руб.</p>
-                <p><strong>Жанр:</strong> Стратегии</p>
-            </div>
-            <button class="buy-button">Удалить из корзины</button>
-        </div>
+        
     </section>
+    <button id="scrollTop" title="Наверх">↑</button>
+</main>
+    <script src="js\cart.js"></script>
     <footer>
         <h2 id="contact">Контакты</h2>
         <p>Email: support@wingmanstore.com</p>
