--- a/catalog.html
+++ b/catalog.html
@@ -41,24 +41,53 @@
         </aside>
         <section class="product-list">
             <div class="game" data-url="products/product1.html">
-                <img src="images/game1.png" alt="Игра 1" class="game-thumbnail">
+                <img src="images/product1_1.jpg" alt="Игра 1" class="game-thumbnail">
                 <div class="game-info">
                     <h3>Игра 1</h3>
-                    <p>Описание игры 1. Цена: 500 руб.</p>
-                    <p><strong>Жанр:</strong> Экшен, Приключения</p>
+                    <p>Описание игры 1.</p>
+                    <p>Жанр: Экшен, Приключения</p>
+                    <p>Цена: 500 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
-            <div class="game">
-                <img src="images/game2.jpg" alt="Игра 2" class="game-thumbnail">
+            <div class="game" data-url="products/product2.html">
+                <img src="images/product2_1.jpg" alt="Игра 2" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 2</h3>
-                    <p>Описание игры 2. Цена: 700 руб.</p>
-                    <p><strong>Жанр:</strong> РПГ</p>
+                    <h3>Игра 1</h3>
+                    <p>Описание игры 1.</p>
+                    <p>Жанр: Экшен, Приключения</p>
+                    <p>Цена: 500 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
-            <div class="game">
+            <div class="game" data-url="products/product2.html">
+                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 3</h3>
+                    <p>Описание игры 3. Цена: 600 руб.</p>
+                    <p><strong>Жанр:</strong> Стратегии</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game" data-url="products/product2.html">
+                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 3</h3>
+                    <p>Описание игры 3. Цена: 600 руб.</p>
+                    <p><strong>Жанр:</strong> Стратегии</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game" data-url="products/product2.html">
+                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Игра 3</h3>
+                    <p>Описание игры 3. Цена: 600 руб.</p>
+                    <p><strong>Жанр:</strong> Стратегии</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game" data-url="products/product2.html">
                 <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
                 <div class="game-info">
                     <h3>Игра 3</h3>
