--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-
+    <main>
     <section id="faq">
         <h2>Вопросы и ответы</h2>
         <div class="faq-item">
@@ -41,7 +41,9 @@
             <p>Да, студенты могут получить скидку, предоставив подтверждение своего статуса.</p>
         </div>
     </section>
-
+    <button id="scrollTop" title="Наверх">↑</button>
+    <script src="js\faq.js"></script>
+</main>
     <footer>
         <h2 id="contact">Контакты</h2>
         <p>Email: support@gamesstore.com</p>
