--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
     <main>
     <section id="home">
-        <h2>Добро пожаловать в наш магазин!</h2>
-        <p>Здесь вы найдете лучшие компьютерные игры по самым низким ценам!</p>
+        <h2 id="H2">Добро пожаловать в наш магазин!</h2>
+        <p id="H2">Здесь вы найдете лучшие компьютерные игры по самым низким ценам!</p>
     </section>
 
     <div class="modal" id="imageModal">
@@ -39,65 +39,78 @@
     </div>
 
     <section id="games">
-        <h2>Наши Игры</h2>
+        <h2 id="H2">НАШИ ТОВАРЫ</h2>
         <table id="gamesTable">
             <tbody>
-                <!-- Первая строка -->
                 <tr>
                     <td>
-                        
                         <div class="game" data-url="products/product1.html">
                             <div class="image-container">
                                 <img src="images/product1_1.jpg" alt="Игра 1" class="thumbnail">
                             </div>
                             <h3>GTA V</h3>
-                            <p>Шутер, мультиплеер.
+                            <p> Кооп-шутер с элементами криминалистики.
+                                Жанры: Шутер, мультиплеер.
                                 Цена: 1000 руб.</p>
-                            <button class="buy-button" data-product='{"name": "GTA V", "price": 1000}'>Купить</button>
+                            <button class="buy-button">Купить</button>
                         </div>
-                        
                     </td>
                     <td>
                         <div class="game" data-url="products/product2.html">
-                            <img src="images/game2.jpg" alt="Игра 2">
+                            <div class="image-container">
+                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                            </div>
                             <h3>Minecraft</h3>
-                            <p>Описание игры 2. Цена: 2000 руб.</p>
-                            <button class="buy-button" data-product='{"name": "Minecraft", "price": 2000}'>Купить</button>
+                            <p> Кубический мир для настоящих творцов.
+                                Жанры: Песочница, открытый мир..
+                                 Цена: 2000 руб.</p>
+                            <button class="buy-button">Купить</button>
                         </div>
                     </td>
                     <td>
-                        <div class="game">
-                            <img src="images/game3.jpg" alt="Игра 3">
+                        <div class="game" data-url="products/product2.html">
+                            <div class="image-container">
+                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                            </div>
                             <h3>Игра 3</h3>
-                            <p>Описание игры 3. Цена: 600 руб.</p>
-                            <button>Купить</button>
+                            <p>Описание игры 3. 
+                                Цена: 600 руб.</p>
+                            <button class="buy-button">Купить</button>
                         </div>
                     </td>
                 </tr>
-                <!-- Вторая строка -->
                 <tr>
                     <td>
-                        <div class="game">
-                            <img src="images/game4.jpg" alt="Игра 4">
+                        <div class="game" data-url="products/product2.html">
+                            <div class="image-container">
+                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                            </div>
                             <h3>Игра 4</h3>
-                            <p>Описание игры 4. Цена: 550 руб.</p>
-                            <button>Купить</button>
+                            <p>Описание игры 4. 
+                                Цена: 550 руб.</p>
+                            <button class="buy-button">Купить</button>
                         </div>
                     </td>
                     <td>
-                        <div class="game">
-                            <img src="images/game5.jpg" alt="Игра 5">
+                        <div class="game" data-url="products/product2.html">
+                            <div class="image-container">
+                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                            </div>
                             <h3>Игра 5</h3>
-                            <p>Описание игры 5. Цена: 800 руб.</p>
-                            <button>Купить</button>
+                            <p>Описание игры 5. 
+                                Цена: 800 руб.</p>
+                            <button class="buy-button">Купить</button>
                         </div>
                     </td>
                     <td>
-                        <div class="game">
-                            <img src="images/game6.jpg" alt="Игра 6">
+                        <div class="game" data-url="products/product2.html">
+                            <div class="image-container">
+                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                            </div>
                             <h3>Игра 6</h3>
-                            <p>Описание игры 6. Цена: 650 руб.</p>
-                            <button>Купить</button>
+                            <p>Описание игры 6. 
+                                Цена: 650 руб.</p>
+                            <button class="buy-button">Купить</button>
                         </div>
                     </td>
                 </tr>
