--- a/products/product1.html
+++ b/products/product1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товар - HITMAN World of Assassination</title>
+    <title>Товар - GTA V</title>
     <link rel="stylesheet" href="product1.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-        <a href="../index.html" class="back-button">← Назад</a>
+        <a href="#" class="back-button" onclick="history.back(); return false;">← Назад</a>
         <div class="product-header">
             <h1>Grand Thief Auto V</h1>
             <div class="price">1000 руб.</div>
