--- a/products/product2.html
+++ b/products/product2.html
@@ -3,61 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товар - HITMAN World of Assassination</title>
-    <link rel="stylesheet" href="product1.css">
+    <title>Товар - Minecraft</title>
+    <link rel="stylesheet" href="product2.css">
 </head>
 <body>
-
-    <div class="modal" id="imageModal">
-        <span class="close" id="closeModal">&times;</span>
-        <img id="modalImage" src="" alt="Увеличенное изображение">
-    </div>
-
-    <div class="container">
-        <a href="../index.html" class="back-button">← Назад</a>
-        <div class="product-header">
-            <h1>Grand Thief Auto V</h1>
-            <div class="price">1000 руб.</div>
+    <main>
+        <div class="modal" id="imageModal">
+            <span class="close" id="closeModal">&times;</span>
+            <img id="modalImage" src="" alt="Увеличенное изображение">
         </div>
-        <div class="product-gallery">
-                <div class="image-container">
-                    <img id="mainImage" src="../images/product1_1.jpg" alt="GTA Main" class="main-image">
-                    <img src="../images/zoom.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="../images/product1_1.jpg">
+
+        <div class="container">
+            <a href="#" class="back-button" onclick="history.back(); return false;">← Назад</a>
+            <div class="product-header">
+                <h1>Minecraft</h1>
+                <div class="price">2000 руб.</div>
+            </div>
+            <div class="product-gallery">
+                    <div class="image-container">
+                        <img id="mainImage" src="../images/product2_1.jpg" alt="GTA Main" class="main-image">
+                        <img src="../images/zoom.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="../images/product2_1.jpg">
+                    </div>
+                <div class="thumbnails">
+                    <img src="../images/product2_1.jpg" alt="Изображение 1" class="thumbnail">
+                    <img src="../images/product2_2.jpg" alt="Изображение 2" class="thumbnail">
+                    <img src="../images/product2_3.jpg" alt="Изображение 3" class="thumbnail">
+                    <img src="../images/product2_4.jpg" alt="Изображение 4" class="thumbnail">
                 </div>
-            <div class="thumbnails">
-                <img src="../images/product1_1.jpg" alt="Изображение 1" class="thumbnail">
-                <img src="../images/product1_2.jpg" alt="Изображение 2" class="thumbnail">
-                <img src="../images/product1_3.jpg" alt="Изображение 3" class="thumbnail">
-                <img src="../images/product1_4.jpg" alt="Изображение 4" class="thumbnail">
+            </div>
+            <div class="product-description">
+                <h2>Описание</h2>
+                <p>Строй все, что только можешь вообразить, раскрывай страшные тайны и выживай ночью в потрясающей игре-песочнице. В Minecraft каждое прохождение игры уникально и за каждым углом тебя ждут незабываемые приключения. Исследуй и твори по-своему, блок за блоком, ведь этот бесконечный мир полностью в твоем распоряжении.</p>
+            </div>
+            <div class="genres">
+                <h3>Жанры:</h3>
+                <span>Песочница</span>
+                <span>Кооператив</span>
+                <span>Открытый мир</span>
+            </div>
+            <div class="buy-section">
+                <button id="buyButton" class="buy-button">Купить</button>
+            </div>
+            <div class="reviews">
+                <h2>Отзывы покупателей</h2>
+                <div class="review">
+                    <strong>Петя Иванов</strong>
+                    Игра супер! Очень затягивает!!
+                </div>
             </div>
         </div>
-        <div class="product-description">
-            <h2>Описание</h2>
-            <p>When a young street hustler, a retired bank robber, and a terrifying psychopath find themselves entangled with some of the most frightening and deranged elements of the criminal underworld, the U.S. government, and the entertainment industry, they must pull off a series of dangerous heists to survive in a ruthless city in which they can trust nobody — least of all each other.</p>
-        </div>
-        <div class="genres">
-            <h3>Жанры:</h3>
-            <span>Экшен</span>
-            <span>Шутер</span>
-            <span>Для одного игрока</span>
-        </div>
-        <div class="buy-section">
-            <button id="buyButton" class="buy-button">Купить</button>
-        </div>
-        <div class="reviews">
-            <h2>Отзывы покупателей</h2>
-            <div class="review">
-                <strong>Иван Петров</strong>
-                Отличная игра! Графика и сюжет на высшем уровне.
-            </div>
-            <div class="review">
-                <strong>Анна Смирнова</strong>
-                Вдохновляющая атмосфера, сложные миссии. Рекомендую!
-            </div>
-        </div>
-        <button id="scrollTop" title="Наверх">↑</button>
-    </div>
+    </main>
+    <button id="scrollTop" title="Наверх">↑</button>
     
-    <script src="product1.js"></script>
+    <script src="product2.js"></script>
 </body>
 </html>
